--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
         </section>
         <section class="sec-2">
             <div class="icon">
-                <div class="one"><img src="./logos/Alibaba.svg" alt=""></div> 
-                <div class="two"><img src="./logos/Amazon.svg" alt=""></div> 
-               <div class="three"><img src=" ./logos/Daraz.pk Logo.svg" alt=""></div> 
-                <div class="four"><img src="./logos/Ebay.svg" alt=""></div>
-               <div class="five"> <img src="./logos/Rakuten.svg" alt=""></div>
-               <div class="six"><img src=" ./logos/Target.svg" alt=""></div> 
-                <div class="seven"><img src="./logos/Walmart.svg" alt=""></div>
+                <div class="market"><img src="./logos/Amazon.svg" alt=""></div> 
+                <div class="market" ><img src=" ./logos/Daraz.pk Logo.svg" alt=""></div> 
+                <div class="market"><img src="./logos/Alibaba.svg" alt=""></div> 
+                <div class="market"><img src="./logos/Ebay.svg" alt=""></div>
+               <div  class="market"> <img src="./logos/Rakuten.svg" alt=""></div>
+               <div  class="market"><img src=" ./logos/Target.svg" alt=""></div> 
+                <div class="market"><img src="./logos/Walmart.svg" alt=""></div>
             </div>
         </section>
         <!-- ============== section three collection start===========-->
