--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <div class="item">
                         <img src="./images/camera.png" alt="">
                         <div class="item-detail">
-                            <h2>vloogin camera</h2>
+                            <h2>vlogging camera</h2>
                             <h3>&dollar;2350.48</h3>
                             <div class="rating">
                                 <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i></p>
